--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout:	default
 title: 文章目录
 ---
-{% if site.theme == 'kunka' or site.theme == 'jmq'  %}
+{% if site.theme == 'kunka' or site.theme == 'jmq'  or site.theme == 'cool' %}
 	{% include {{site.theme}}_index.html %}
 {% else %}
 	{% include default_index.html %}
