--- a/navigations/archives.html
+++ b/navigations/archives.html
@@ -1,20 +1,42 @@
 ---
+title: 文章归档
 layout: default
-title: Archives
+sidePart: right
 ---
-<div class="article">
-    <h3 class="title">{{ page.title }}</h3>
-    {% capture post_year1 %}{{ 'now' | date: '%Y' }}{% endcapture %}
-    <ul class="article-year" data-year="{{ post_year1 }}">
-        {% for post in site.posts %}
-            {% capture post_year2 %}{{ post.date | date: '%Y' }}{% endcapture %}
-            {% if post_year1 != post_year2 %}
-                {% assign post_year1 = post_year2 %}
-    </ul>
-    <ul class="article-year" data-year="{{ post_year1 }}">
-            {% endif %}
-        <li class="fn-clear"><span>{{ post.date |  date: '%b %d' }}</span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
 
+<script type="text/javascript">
+// prepare data from jekyll
+var $J = {
+  baseUrl: "{{ site.baseurl }}/navigations/archives.html/?label=",
+  staticUrl: "/themes/{{site.theme}}/images",
+  labels: [
+    "显示全部",
+    {% for post in site.posts %}
+        {% for label in post.category %}
+          "{{ label }}",
+        {% endfor %}
+    {% endfor %}
+  ],
+  posts: [
+    {% for post in site.posts %}
+      {
+        title: "{{ post.title }}",
+        date: "{{ post.date | date: "%Y-%m-%d" }}",
+        link: "{{ post.url | prepend: site.baseurl }}",
+        labels: [
+        {% for label in post.category %}
+          "{{ label }}",
+        {% endfor %}
+        ]
+      },
+    {% endfor %}
+  ]
+};
+</script>
+
+<div id="main"></div>
+
+<!-- concat React JSX -->
+<script src="/themes/{{site.theme}}/js/lib/react/react.min.js"></script>
+<script src="/themes/{{site.theme}}/js/lib/react/JSXTransformer.js"></script>
+<script type="text/jsx" src="/navigations/articles.js" ></script>
