--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout:	default
-title: 文章目录
+title: 首页
+sidePart: right
 ---
 {% if site.theme == 'kunka' or site.theme == 'jmq'  or site.theme == 'cool' %}
 	{% include {{site.theme}}_index.html %}
