--- a/navigations/contact.html
+++ b/navigations/contact.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 title: 关于我
-sidePart: none
-comment: true
+comments: true
 ---
 
 <div class="article">
@@ -36,4 +35,6 @@ comment: true
             {% endif %}
         {% endif %}
     </div>
+    
+    <iframe src="{{ site.baseurl }}/assets/attachs/cv.pdf"  align="middle" width="100%" height="600"></iframe> 
 </div>
