--- a/page10/index.html
+++ b/page10/index.html
@@ -271,7 +271,7 @@
     jsonp('http://analytics1.sinaapp.com/page.php', {
         callback: 'getCallback',
         type: 'getByDomain',
-        domain: 'http://jerryzou.com'
+        domain: 'http://www.haojunyu.link'
     });
 
     function getCallback(result) {
@@ -280,6 +280,7 @@
         }
     }
 </script>
+
 
 
 
