--- a/page4/index.html
+++ b/page4/index.html
@@ -285,7 +285,7 @@
     jsonp('http://analytics1.sinaapp.com/page.php', {
         callback: 'getCallback',
         type: 'getByDomain',
-        domain: 'http://jerryzou.com'
+        domain: 'http://www.haojunyu.link'
     });
 
     function getCallback(result) {
@@ -294,6 +294,7 @@
         }
     }
 </script>
+
 
 
 
