--- a/page11/index.html
+++ b/page11/index.html
@@ -221,7 +221,7 @@
     jsonp('http://analytics1.sinaapp.com/page.php', {
         callback: 'getCallback',
         type: 'getByDomain',
-        domain: 'http://jerryzou.com'
+        domain: 'http://www.haojunyu.link'
     });
 
     function getCallback(result) {
@@ -230,6 +230,7 @@
         }
     }
 </script>
+
 
 
 
