--- a/page3/index.html
+++ b/page3/index.html
@@ -275,7 +275,7 @@
     jsonp('http://analytics1.sinaapp.com/page.php', {
         callback: 'getCallback',
         type: 'getByDomain',
-        domain: 'http://jerryzou.com'
+        domain: 'http://www.haojunyu.link'
     });
 
     function getCallback(result) {
@@ -284,6 +284,7 @@
         }
     }
 </script>
+
 
 
 
