--- a/page5/index.html
+++ b/page5/index.html
@@ -273,7 +273,7 @@
     jsonp('http://analytics1.sinaapp.com/page.php', {
         callback: 'getCallback',
         type: 'getByDomain',
-        domain: 'http://jerryzou.com'
+        domain: 'http://www.haojunyu.link'
     });
 
     function getCallback(result) {
@@ -282,6 +282,7 @@
         }
     }
 </script>
+
 
 
 
