--- a/page9/index.html
+++ b/page9/index.html
@@ -269,7 +269,7 @@
     jsonp('http://analytics1.sinaapp.com/page.php', {
         callback: 'getCallback',
         type: 'getByDomain',
-        domain: 'http://jerryzou.com'
+        domain: 'http://www.haojunyu.link'
     });
 
     function getCallback(result) {
@@ -278,6 +278,7 @@
         }
     }
 </script>
+
 
 
 
